test_suite/tests/ui/remote/nonremote_getter.stderr
error: #[serde(getter = "...")] can only be used in structs that have #[serde(remote = "...")]
 --> $DIR/nonremote_getter.rs:5:1
  |
5 | / struct S {
6 | |     #[serde(getter = "S::get")]
7 | |     a: u8,
8 | | }
  | |_^

error: aborting due to previous error

